--- a/ozakboy.NLOG/ozakboy.NLOG/ozakboy.NLOG.csproj
+++ b/ozakboy.NLOG/ozakboy.NLOG/ozakboy.NLOG.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Authors>ozakboy</Authors>
+    <RepositoryUrl>https://github.com/ozakboy/ozakboy.NLOG</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/ozakboy/ozakboy.NLOG</PackageProjectUrl>
   </PropertyGroup>
 
 </Project>
