--- a/ozakboy.NLOG/ozakboy.NLOG/ozakboy.NLOG.csproj
+++ b/ozakboy.NLOG/ozakboy.NLOG/ozakboy.NLOG.csproj
@@ -40,4 +40,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+  </ItemGroup>
+
 </Project>
